# Toki

./: .clang-format  .clangd  .editorconfig  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  a.out  common.premake.lua  generate_vs.bat  premake.paths.lua  premake5.lua  run.bat  run.sh  test.cpp  test.txt  xmake.lua
src/toki/renderer/: CMakeLists.txt  commands.h  renderer_allocators.cpp  renderer_allocators.h
src/toki/renderer/frontend/: renderer_frontend.h  renderer_types.h
src/toki/renderer/vulkan/: vulkan_backend.cpp  vulkan_commands.cpp  vulkan_resources.cpp  vulkan_resources_utils.cpp  vulkan_utils.cpp
toki/: CMakeLists.txt
toki/core/: CMakeLists.txt  core.cpp  tkpch_core.h
toki/core/include/toki/: core.h
toki/core/src/: CMakeLists.txt  format.h  print.cpp  print.cpp_  print.h  tkpch_core.cpp  tkpch_core.h
toki/core/src/containers/: basic_ref.h  dynamic_array.h  handle_map.h  hash_map.h  static_array.h  unique_ref.h  weak_ref.h
toki/core/src/core/: assert.h  base.h  common.h  concepts.h  log.h  macros.h  result.h  time.h  types.h
toki/core/src/math/: math.h  types.h
toki/core/src/memory/: allocator.cpp  allocator.h  bump_allocator.h  double_bump_allocator.h  memory.cpp  memory.h
toki/core/src/platform/: _linux_platform_old.cpp  attributes.h  defines.h  entry.cpp  glfw_window.cpp  linux_entry.cpp  linux_platform.cpp  linux_platform.h  linux_wayland.h  platform.h
toki/core/src/string/: span.h  string.h  string_view.h
toki/core/src/types/: type_traits.h
toki/core/src/window/: event.h  event_handler.cpp  event_handler.cpp_  event_handler.h  window.h
toki/engine/: CMakeLists.txt  engine.cpp  engine.h  layer.h
toki/engine/include/toki/: engine.h
toki/engine/src/: system_manager.h  tkpch_engine.cpp  tkpch_engine.h
toki/engine/src/engine/: engine.h  entrypoint.cpp  system_manager.cpp  system_manager.h
toki/engine/src/engine_/: engine.cpp
toki/engine/src/events/: event.cpp  event.h
toki/engine/src/input/: input.h  key_codes.h
toki/engine/src/platform/: platform.h  platform_entry_win32.cpp  platform_io.h  platform_win32.cpp  platform_window.h
toki/engine/src/platform_/: glfw_window.h  platform_io_windows.cpp  platform_linux.cpp
toki/engine/src/resources/: resources.h
toki/engine/src/systems/: font_system.h  texture_system.h
toki/platform/: CMakeLists.txt
toki/platform/src/: glfw_window.cpp
toki/platform/src/linux/: io.cpp  memory.cpp  window.cpp
toki/renderer/: CMakeLists.txt
toki/renderer/include/toki/: renderer.h  renderer_commands.h  renderer_frontend.h  renderer_types.h
toki/renderer/src/: renderer_commands.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.h
toki/renderer/src/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_commands.cpp  vulkan_commands.h  vulkan_internal_types.h  vulkan_platform.h  vulkan_platform_linux.cpp  vulkan_platform_win32.cpp  vulkan_types.h
toki/sandbox/: CMakeLists.txt
toki/sandbox/src/: sandbox.cpp  test_layer.cpp
toki/src/: platform.h  tkpch.cpp  tkpch.h  toki.h
toki/src/platform/: glfw_window.cpp  glfw_window.h  platform.h
toki/src/platform/glfw/: glfw_window.cpp  glfw_window.h
toki/src/platform/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.cpp  vulkan_utils.h
toki/src/platform/windows/: windows_window.cpp  windows_window.h
toki/src/renderer/: buffer.cpp  buffer.h  command_pool.cpp  command_pool.h  framebuffer.cpp  framebuffer.h  mapping_functions.cpp  mapping_functions.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  render_thread.cpp  render_thread.h  renderer_state.h  sampler.cpp  sampler.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command.cpp  vulkan_command.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_image.cpp  vulkan_image.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer.api.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_api.cpp  vulkan_rendering_context.cpp  vulkan_rendering_context.h  vulkan_sampler.cpp  vulkan_sampler.h  vulkan_shader.cpp  (+6 more)
toki/src/renderer/pipeline/: compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  shader_compiler.cpp  shader_compiler.h  vulkan_pipeline.cpp  vulkan_pipeline.h
toki/src/toki/: toki.h
toki/src/toki/core/: application.cpp  application.h  assert.h  containers.h  core.h  errors.h  frame_data.h  id.cpp  id.h  layer.cpp  layer.h  logging.h  window.cpp  window.h
toki/src/toki/events/: event.cpp  event.h  events.cpp  events.h
toki/src/toki/job_system/: job.h  job_system.cpp  job_system.h  worker_thread.cpp  worker_thread.h
toki/src/toki/memory/: double_buffered_allocator.cpp  double_buffered_allocator.h  memory.cpp  memory.h  platform_memory.cpp  platform_memory.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
toki/src/toki/profiling/: timer.cpp  timer.h
toki/src/toki/renderer/: buffer.cpp  buffer.h  command.h  render_pass.cpp  render_pass.h  renderer.h  (+10 more)
toki/toki/: CMakeLists.txt
toki/toki/core/: CMakeLists.txt  attributes.h  core.h  errors.h  tkpch_core.h
toki/toki/platform/: CMakeLists.txt  errors.h  glfw_window.cpp  platform.h  syscalls.h  types.h  window.h
toki/toki/renderer/: CMakeLists.txt  commands.h  errors.h  renderer.h  renderer_allocators.cpp  renderer_allocators.h  types.h
toki/toki/runtime/: CMakeLists.txt  runtime.h
toki/toki/sandbox/: CMakeLists.txt  sandbox.cpp  test_layer.cpp  test_layer.h
toki_libs/core/: CMakeLists.txt  premake5.lua  tkpch_core.h
toki_libs/core/containers/: handle_map.h
toki_libs/core/core/: logging.h
toki_libs/core/memory/: allocator.h  bump_allocator.h
toki_libs/core/platform/: platform.h  stream.h  time.h  window.h
toki_libs/core/src/: tkpch_core.cpp  tkpch_core.h
toki_libs/core/string/: string_view.h
(+973 files in other folders)
